# oop_beta

./: pyproject.toml
src/: base_class.py  category.py  grass.py  product.py  smartphone.py  training.py
tests/: test_category.py  test_oop.py  test_product.py
