[tool.poetry]
name = "oop-beta"
version = "0.1.0"
description = ""
authors = ["<Mariya Polshkova> <<polshkovamamariya@gmail.com>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"


[tool.poetry.group.lint.dependencies]
black = "^23.12.0"
isort = "^5.13.2"
mypy = "^1.8.0"



[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'


[tool.black]
# максимальная длина строки
line-length = 119
# файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # исключить несколько общих каталогов в
    | \.git          # корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # также отдельно исключить файл с именем foo.py в
                     # корне проекта
)
'''


[tool.isort]
# максимальная длина строки
line_length = 119
